# AI_MOCK_INTERVIEW_PLATFORM

./: config.py  main.py  pyproject.toml  requirements.txt  template.py
ai-interview-app/agents/: evaluator_agent.py  followup_agent.py  hr_agent.py
ai-interview-app/frontend/: streamlit_app.py
ai-interview-app/rag/: chunking.py
ai-interview-app/resume/: parser.py
ai-interview-app/utils/: scoring.py
ai_interview_app/agents/: evaluator_agent.py  followup_agent.py  hr_agent.py  question_agent.py
ai_interview_app/api/: main.py
ai_interview_app/database/: models.py
ai_interview_app/rag/: embeddings.py  retriever.py
ai_interview_app/tests/: test_scenario.py
ai_interview_app/utils/: llm_client.py  prompts.py
ai_interview_app/workflows/: interview_graph.py
ai_mock_interview_platform.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
