[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[project]
name = "ai-mock-interview-platform"
version = "0.1.0"
description = "ai-mock-interview-platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []


[tool.setuptools.packages.find]
where = ["."]
include = ["ai_interview_app*"]